--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
-    <title>Muviz</title>
+    <title>Muwviz</title>
     <meta
       http-equiv="Content-Security-Policy"
       content="script-src 'self'; style-src 'self' 'unsafe-inline'"
