--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html>
+<html lang="ja">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -11,7 +11,7 @@
   </head>
 
   <body>
-    <svg display="none" xmlns="http://www.w3.org/2000/svg">
+    <svg display="none" >
       <symbol id="icon-swatch" viewBox="0 0 24 24">
         <path
           clip-rule="evenodd"
