--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -6,7 +6,7 @@
     <title>Muwviz</title>
     <meta
       http-equiv="Content-Security-Policy"
-      content="script-src 'self'; style-src 'self' 'unsafe-inline'; img-src 'self'"
+      content="script-src 'self'; style-src 'self' 'unsafe-inline';"
     />
   </head>
 
