--- a/src/renderer/visualizer-config.html
+++ b/src/renderer/visualizer-config.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Muwviz</title>
+    <meta
+      http-equiv="Content-Security-Policy"
+      content="script-src 'self'; style-src 'self' 'unsafe-inline';"
+    />
   </head>
   <body>
     <div id="app"></div>
